--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.10.1",
+    "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
     "react-scripts": "3.1.2"
   },
@@ -38,9 +39,8 @@
     ]
   },
   "lint-staged": {
-    "**/*.{js,jsx}": [
-      "yarn format",
-      "yarn lint:fix",
+    "src/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+      "prettier — single-quote — write",
       "git add"
     ]
   },
@@ -55,8 +55,10 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
-    "eslint-plugin-react": "^7.15.0",
-    "husky": "^3.0.7",
+    "eslint-plugin-react": "^7.15.1",
+    "husky": "^3.0.8",
+    "import-sort-cli": "^6.0.0",
+    "import-sort-style-eslint": "^6.0.0",
     "lint-staged": "^9.4.1",
     "prettier": "^1.18.2"
   }
