--- a/package.json
+++ b/package.json
@@ -6,12 +6,15 @@
   "dependencies": {
     "@reach/router": "^1.2.1",
     "bootstrap": "^4.3.1",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.14.0",
     "jquery": "^3.4.1",
     "popper.js": "^1.15.0",
     "react": "^16.10.1",
     "react-bootstrap": "^1.0.0-beta.12",
     "react-dom": "^16.10.1",
-    "react-scripts": "3.1.2"
+    "react-scripts": "3.2.0",
+    "react-test-renderer": "^16.10.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -24,10 +27,7 @@
     "format": "prettier --write \"**/*.+(js|jsx|json|css|md)\""
   },
   "eslintConfig": {
-    "extends": [
-      "react-app",
-      "plugin:prettier/recommended"
-    ]
+    "extends": "react-app"
   },
   "devDependencies": {
     "babel-eslint": "^10.0.3",
@@ -40,7 +40,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.1",
     "eslint-plugin-react": "^7.15.1",
-    "eslint-plugin-react-hooks": "^1.7.0",
+    "eslint-plugin-react-hooks": "^2.1.1",
     "husky": "^3.0.8",
     "import-sort-cli": "^6.0.0",
     "import-sort-style-eslint": "^6.0.0",
